[package]
name = "async-tokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
better-backtrace = { path = "../../better-backtrace" }
common = { path = "../async-common" }
tokio = { version = "1", features = ["full"] }
